Fixed jumbotron placement of p tags and with column-8 text-alignment to center for everything else.

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -7,7 +7,7 @@
 text-decoration-color: #ffe66e;
 }
 
-#Beach, #Dancing, #communityService {
+#Beach, #Dancing, #communityService .professionalPhoto{
 width: auto;
 height: auto;
 }
